# bluelephant

./: .gitignore  README.md  main.py  pyproject.toml
backend/: chat_protocol.py  connection_manager.py  db.py  dev.py  http_handlers.py  main.py  websocket_handlers.py
frontend/: index.html
